--- a/myApp/src/jsPlaygtound/pointEvent.html
+++ b/myApp/src/jsPlaygtound/pointEvent.html
@@ -13,7 +13,7 @@
     demo.addEventListener("pointerdown", (e) => {
       console.log(demo)
       console.log(e.target)
-      console.log(e.taget !== demo)
+      console.log(e.taget === demo)
       console.log('pointerdown',e);
       console.log(e.clientX, e.clientY);
       console.log(e.pageX, e.pageY);
