--- a/myApp/ssr2/index.html
+++ b/myApp/ssr2/index.html
@@ -4,7 +4,8 @@
 <title>Vue SSR Example</title>
 </head>
 <body>
-    <div id="app"><!--ssr-outlet--></div>
+    <h3>ssr服务端同构渲染学习！,直接修改index.html是支持HMR的</h3>
+    <div id="app"><!--ssr-outlet--></div>  <!--这里的ssr-outlet 是占位符，用于服务端渲染时替换-->
     <script type="module" src="/src/client-entry.js"></script>
 </body>
 </html>
